cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE    DEBUG)
set(CMAKE_LOG_PATH      log)
set(CMAKE_THREAD_LIMIT  4)
set(CMAKE_SERVER_PORT   5000)
set(CMAKE_REQUEST_LIMIT 5000)
include_directories(include)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "target")

project(mathserv VERSION 0.1)
include_directories(include)
configure_file("include/config.h.in" "include/config.h" @ONLY)

add_subdirectory(projects/logger)
add_subdirectory(projects/client)
add_subdirectory(projects/server)
add_subdirectory(projects/IUIP)
add_subdirectory(projects/test)